--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,7 +1,13 @@
 - layout: left
   name: University of Notre Dame
-  dates: 2016 - 2020
+  dates: Aug 2016 - May 2020
   qualification: B.S. in Applied and Computational Mathematics and Statistics  
-  Minor in Education, Schooling, and Society
   description: | # this will include new lines to allow paragraphs
     Describe education.
+
+- layout: left
+  name: National University of Singapore
+  dates: Aug 2018 - Dec 2018
+  qualification: Faculty of Science - Statistics
+  description: | # this will include new lines to allow paragraphs
+    Participated in a semester exchange program.
