--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -8,3 +8,16 @@
     A text analysis project to quantitatively compare transcripts of Academy Award acceptance speeches given by actors and actresses to investigate if there are differences in speech style across gender. 
     The project involves web scraping, data cleaning, and several text analytic techniques including sentiment analysis, structural topic modeling, and part-of-speech tagging, all programmed in <mark>R</mark>.
    
+- layout: top-middle
+  name: North Carolina Public Schools School Report Card - Adapted
+  link: https://public.tableau.com/profile/honoka.suzuki#!/vizhome/NCPSSchoolReportCard/NCDashboard
+  github: honokasuzuki/nc-publicschools
+  description: | # this will include new lines to allow paragraphs
+    An adaptation of the NC Public Schools School Report Card. The final product is an interactive data visualization created in <mark>Tableau</mark>, with the source data formatted using <mark>R</mark>. 
+   
+- layout: top-middle
+  name: Cost-sensitive Neural Networks for Classifying Mushrooms
+  link: github.com/honokasuzuki/poison-mushrooms
+  github: honokasuzuki/poison-mushrooms
+  description: | # this will include new lines to allow paragraphs
+    A cost-sensitive neural network analysis for detecting poisonous and edible mushrooms and experimentation with varying misclassification costs. The network is built with <mark>PyTorch</mark>. 
