--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ repository: sproogen/resume-theme
 favicon: images/favicon.ico
 
 # Personal info
-name: Honoka Suzuki
+name: Honoka L Suzuki
 # title: Senior Network System Administrator
 email: honokasuzuki@outlook.com
 website: https://honokasuzuki.github.io/
@@ -18,8 +18,12 @@ about_profile_image: images/headshot_small.JPG
 about_content: | # this will include new lines to allow paragraphs
   Hi, I'm Honoka.
 
-  I am most skilled in: <mark>AWS</mark> and <mark>Eating Pizza</mark>
-
+  I am a recent graduate of the University of Notre Dame with a background in Applied & Computational Statistics.
+  With several internship experiences in the field of data science and analytics, as well as research experience in quantitative psychology, I am passionate about the use of computational, data-driven approaches to tackle the problems in our society.
+  Put broadly, my career interests lie at the intersection of data and society - I aspire to become a research data scientist whose work impacts areas such as education and public health. 
+  
+  Proficient in <mark>R</mark> and <mark>Python</mark>, my projects have dealt with analytical techniques such as machine learning, text analysis, data visualization, statistical modeling, and data manipulation.
+  
 # Projects Section
 # projects_title: Projects
 
@@ -30,15 +34,15 @@ about_content: | # this will include new lines to allow paragraphs
 # educaton_title: Education
 
 # More Section
-more_title: Interests
+more_title: Other Interests
 more_content: | # this will include new lines to allow paragraphs
-  Alongside my interests in networks and software engineering some of my other interests and hobbies are:
-   - Rock climbing
-   - Gaming
-   - Knitting
+  In addition my interests in data science and social science research, my personal hobbies and interests include:
+   - Healthy baking
+   - Fashion illustration
+   - Traveling
 
 # Footer
-footer_show_references: true
+footer_show_references: false
 
 # Build settings
 remote_theme: sproogen/resume-theme
