--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -1,4 +1,4 @@
-- layout: left
+- layout: top
   name: Text Analysis on Academy Awards Acceptance Speeches - Actors vs. Actresses
   link: github.com/honokasuzuki/academy-awards
   github: honokasuzuki/academy-awards
