--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -1,9 +1,25 @@
 - layout: left
-  company: The Boring Company
-  link: boringcompany.com
-  job_title: Senior Network System Administrator
-  dates: November 2017 - Present
-  quote: >
-   Solving 21st century problems by diging holes and making game changing products like the *not a flamethrower*
+  company: Learning Analytics and Measurement in Behavioral Sciences Lab
+  link: lambslab.nd.edu/
+  job_title: Research Assistant
+  dates: Sep 2017 - Present
   description: | # this will include new lines to allow paragraphs
-    Every company needs its networks properly administered and The Boring Compay is no exception. Digging holes is hard and I play my part making sure the whole company stays connected. I lead a team of 5 people and enjoy driving the company to try new technologies.
+    
+- layout: left
+  company: Academic Technologies Lab of Notre Dame
+  job_title: Data Analyst
+  dates: Sep 2019 - May 2020
+  description: | # this will include new lines to allow paragraphs
+  
+- layout: left
+  company: EF Education First
+  link: www.ef.edu/
+  job_title: Data Science Intern
+  dates: May 2019 - Aug 2019
+  description: | # this will include new lines to allow paragraphs
+
+- layout: left
+  company: Performance Science Team of Notre Dame Athletics
+  job_title: Analytics Intern
+  dates: May 2018 - May 2020
+  description: | # this will include new lines to allow paragraphs
