--- a/_config.yml
+++ b/_config.yml
@@ -36,7 +36,7 @@ about_content: | # this will include new lines to allow paragraphs
 # More Section
 more_title: Other Interests
 more_content: | # this will include new lines to allow paragraphs
-  In addition my interests in data science and social science research, my personal hobbies and interests include:
+  In addition to my interests in data science and social science research, my personal hobbies and interests include:
    - Healthy baking
    - Fashion illustration
    - Traveling
