--- a/_data/education.yml
+++ b/_data/education.yml
@@ -5,7 +5,7 @@
   description: | # this will include new lines to allow paragraphs
     During my years at Notre Dame, I gained knowledge and skills in mathematics and statistics, with a focus on computational applications, such as data mining and statistical programming. 
     My senior thesis used machine learning techniques such as random forests to model discrepancies between learning outcomes in AP Statistics classrooms in order to understand sources of variation across performance on distinct assessments.  
-    In addition to my major's courses, I took classes in economics, business, education, literature, French, and physics. 
+    In addition to my major's coursework, I took classes in economics, business, education, literature, French, and physics. 
     
     Outside of academics and research, I tutored Math to local high school students, was a member of the Asian American Association, the Student International Business Council, and the Student Union Board.
     
