--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -10,7 +10,8 @@
   job_title: Data Analyst
   dates: Sep 2019 - May 2020
   description: | # this will include new lines to allow paragraphs
-    The Academic Technologies Lab is collaborating with Density (https://www.density.io/) to implement their occupancy sensor platform in various locations of Notre Dame's campus with the ultimate goal of influencing student behavior by providing students with access to real-time occupancy data. My role in this project was to conduct an internal study to assess the accuracy of the sensors placed in the dining halls. This involved data collection, data cleaning, statistical reliability analysis, and creating data visualizations. 
+    The Academic Technologies Lab is collaborating with Density (https://www.density.io/) to implement their occupancy sensor platform in various locations of Notre Dame's campus, with the ultimate goal of influencing student behavior by providing students with access to real-time occupancy data. My role in this project was to conduct an internal study to assess the accuracy of the sensors placed in the dining halls. The project involved technical tasks such as data collection, data cleaning, statistical reliability analysis, and creating data visualizations. 
+    In addition, I regularly met with the dining hall staff and representatives from Density to obtain data, ask questions, receive feedback, and report findings. 
     
     Technologies used: R, Tableau
 - layout: left
@@ -19,7 +20,7 @@
   job_title: Data Science Intern
   dates: May 2019 - Aug 2019
   description: | # this will include new lines to allow paragraphs
-    A summer data science internship. Projects included creating an interactive summary dashboard to display student survey responses, a building classification model for identifying target schools for sales calls, and giving a presentation on insghts gained from an open-ended analysis on traveler cancellation patterns. 
+    A summer data science internship. Projects included creating an interactive summary dashboard to display student survey responses, building a classification model for identifying target schools for sales calls, and giving a presentation on insghts gained from an open-ended analysis on traveler cancellation patterns. 
     
     Technologies used: R, Power BI, Python, SQL
 - layout: left
