--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -4,6 +4,11 @@
   job_title: Research Assistant
   dates: Sep 2017 - Present
   description: | # this will include new lines to allow paragraphs
+    As an undergraduate research assistant, I had the priviledge to work alongside the graduate students and the director of the lab to gain important skills relevant to educational measurement research. 
+    My tasks included data cleaning, running statistical analyses, conducting literature reviews, documenting research methods/findings, and providing peer feedback on academic manuscripts. 
+    During my senior year, I wrote an honors thesis on the application of machine learning techniques to predict differences between learning outcomes (class grade, AP score, practice AP score) in AP Statistics classrooms to understand sources of variation across performance on distinct assessments. 
+    
+    Technologies used: R
     
 - layout: left
   company: Academic Technologies Lab of Notre Dame
@@ -14,20 +19,23 @@
     In addition, I regularly met with the dining hall staff and representatives from Density to obtain data, ask questions, receive feedback, and report findings. 
     
     Technologies used: R, Tableau
+    
 - layout: left
   company: EF Education First
   link: www.ef.edu/
   job_title: Data Science Intern
   dates: May 2019 - Aug 2019
   description: | # this will include new lines to allow paragraphs
-    A summer data science internship. Projects included creating an interactive summary dashboard to display student survey responses, building a classification model for identifying target schools for sales calls, and giving a presentation on insghts gained from an open-ended analysis on traveler cancellation patterns. 
+    A summer data science internship. Projects included creating an interactive summary dashboard to display student survey responses, building a classification model for identifying target schools for sales calls, and giving a presentation on insghts gained from an open-ended data analysis on traveler cancellation patterns. 
     
     Technologies used: R, Power BI, Python, SQL
+    
 - layout: left
   company: Performance Science Team of Notre Dame Athletics
   job_title: Analytics Intern
   dates: May 2018 - May 2020
   description: | # this will include new lines to allow paragraphs
     A summer sports analytics internship that led to a part-time role on campus for the following semesters. Projects included statistical reliability studies done on various athletic equipment (motion capture systems, wearable technologies), an imputation algorithm development for missing athlete training data, and Bayesian variance component estimation for repeated performance measures. 
+    In addition, I cleaned and updated team data stored in the SQL database, conducted literature reviews on sports science research, and communicated findings of my projects with the Atheltics staff.  
     
-    Technologies used: R, Shiny, SQL, Tableau, Stan.    
+    Technologies used: R, Shiny, SQL, Tableau, Stan   
