--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -37,6 +37,6 @@
   dates: May 2018 - May 2020
   description: | # this will include new lines to allow paragraphs
     A summer sports analytics internship that led to a part-time role on campus for the following semesters. Projects included statistical reliability studies done on various athletic equipment (motion capture systems, wearable technologies), an imputation algorithm development for missing athlete training data, and Bayesian variance component estimation for repeated performance measures. 
-    In addition, I cleaned and updated team data stored in the SQL database, conducted literature reviews on sports science research, and communicated findings of my projects with the Atheltics staff.  
+    In addition, I cleaned and updated team data stored in the SQL database, conducted literature reviews on sports science research, and communicated findings of my projects with the Athletics staff.  
     
     Programs used: R, Shiny, SQL, Tableau, Stan   
