--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -8,7 +8,7 @@
     My tasks included data cleaning, running statistical analyses, conducting literature reviews, documenting research methods/findings, and providing peer feedback on academic manuscripts. 
     During my senior year, I wrote an honors thesis on the application of machine learning techniques to predict differences between learning outcomes (class grade, AP score, practice AP score) in AP Statistics classrooms to understand sources of variation across performance on distinct assessments. 
     
-    Programs used: R
+    Programs used: <mark>R</mark>
     
 - layout: left
   company: Academic Technologies Lab of Notre Dame
@@ -18,7 +18,7 @@
     The Academic Technologies Lab is collaborating with Density (https://www.density.io/) to implement their occupancy sensor platform in various locations of Notre Dame's campus, with the ultimate goal of influencing student behavior by providing students with access to real-time occupancy data. My role in this project was to conduct an internal study to assess the accuracy of the sensors placed in the dining halls. The project involved technical tasks such as data collection, data cleaning, statistical reliability analysis, and creating data visualizations. 
     In addition, I regularly met with the dining hall staff and representatives from Density to obtain data, ask questions, receive feedback, and report findings. 
     
-    Programs used: R, Tableau
+    Programs used: <mark>R</mark>, <mark>Tableau</mark>
     
 - layout: left
   company: EF Education First
@@ -29,7 +29,7 @@
     A summer data science internship where I worked under the mentorship of a Data Scientist within the Marketing Team. 
     My projects included creating an interactive summary dashboard to display student survey responses, building a classification model for identifying target schools for sales calls, and giving a presentation on insghts gained from an open-ended data analysis on traveler cancellation patterns. 
     
-    Programs used: R, Power BI, Python, SQL
+    Programs used: <mark>R</mark>, <mark>Python</mark>, <mark>Power BI</mark>, <mark>SQL</mark>
     
 - layout: left
   company: Performance Science Team of Notre Dame Athletics
@@ -39,4 +39,4 @@
     A summer sports analytics internship that led to a part-time role on campus for the following semesters. Projects included statistical reliability studies done on various athletic equipment (motion capture systems, wearable technologies), an imputation algorithm development for missing athlete training data, and Bayesian variance component estimation for repeated performance measures. 
     In addition, I cleaned and updated team data stored in the SQL database, conducted literature reviews on sports science research, and communicated findings of my projects with the Athletics staff.  
     
-    Programs used: R, Shiny, SQL, Tableau, Stan   
+    Programs used: <mark>R</mark>, <mark>Shiny</mark>, <mark>SQL</mark>, <mark>Tableau</mark>, <mark>Stan</mark>   
