--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ favicon: images/favicon.ico
 # Personal info
 name: Honoka L Suzuki
 # title: Senior Network System Administrator
-email: honokasuzuki@outlook.com
+email: honoka.suzuki3@gmail.com
 website: https://honokasuzuki.github.io/
 
 # Social links
