--- a/_data/education.yml
+++ b/_data/education.yml
@@ -4,13 +4,20 @@
   qualification: B.S. in Applied and Computational Mathematics and Statistics, magna cum laude
   description: | # this will include new lines to allow paragraphs
     During my years at Notre Dame, I gained knowledge and skills in mathematics and statistics, with a focus on computational applications, such as data mining and statistical programming (coursework in R, Python, C++, MATLAB, and SAS). 
-    Outside of academics and research, I tutored Math to local high school students, was a member of the Asian American Association, the Student International Business Council, and the Student Union Board.
+    Outside of academics and research, I tutored Math to local high school students, was a TA for an introductory Accounting class, was a member of the Asian American Association, the Student International Business Council, and the Student Union Board.
     
-    <mark>Honors Thesis</mark>: "Applying Machine Learning to Predict Differences between Learning Outcomes", advised by Dr. Alison Cheng.
+    <mark>Honors Thesis</mark> "Applying Machine Learning to Predict Differences between Learning Outcomes", advised by Dr. Alison Cheng.
     
-- layout: left
-  name: National University of Singapore
-  dates: Aug 2018 - Dec 2018
-  qualification: Faculty of Science - Statistics
-  description: | # this will include new lines to allow paragraphs
-    During the fall of 2018, I participated in a semester exchange program. Alongside statistics courses, I took courses on the history of Singapore and the sociology of education in Singapore. 
+    <mark>Honors and Awards</mark>
+    
+    Outstanding Applied and Computational Mathematics and Statistics Major Award, May 2020
+
+    Best Data Visualization Award, Data Fest 2019 at the University of Notre Dame, Apr 2019
+
+    Notre Dame Federal Credit Union Scholarship Recipient, Jun 2018 & 2019
+
+    Pichler Family Scholarship Fund Recipient, Sep 2016
+
+    Glynn Family Honors Program Scholar, Aug 2016 – May 2020
+
+    
