--- a/_data/education.yml
+++ b/_data/education.yml
@@ -6,7 +6,9 @@
     During my years at Notre Dame, I gained knowledge and skills in mathematics and statistics, with a focus on computational applications, such as data mining and statistical programming (coursework in R, Python, C++, MATLAB, and SAS). 
     Outside of academics and research, I tutored Math to local high school students, was a TA for an introductory Accounting class, was a member of the Asian American Association, the Student International Business Council, and the Student Union Board.
     
-    <mark>Honors Thesis</mark> "Applying Machine Learning to Predict Differences between Learning Outcomes", advised by Dr. Alison Cheng.
+    <mark>Honors Thesis</mark>
+    
+    "Applying Machine Learning to Predict Differences between Learning Outcomes", advised by Dr. Alison Cheng.
     
     <mark>Honors and Awards</mark>
     
