--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ about_content: | # this will include new lines to allow paragraphs
   Hi, I'm Honoka.
 
   I'm a recent graduate of the University of Notre Dame with a combined background in Applied Math, Statistics, and Education.
-  With several internship experiences in data science and analytics, as well as research experience in quantitative psychology, I am passionate about the use of computational, data-driven approaches to tackle problems in education.
+  With several internship experiences in data science and analytics, as well as research experience in quantitative psychology, I am passionate about the use of computational, data-driven approaches to tackle problems in education and to improve student learning.
   Broadly, my interests lie at the intersection of data science and education, including topics such as educational data mining, learning analytics, edtech, and AI in education. 
   
   In my free time, I enjoy healthy baking, making fashion illustrations, and going on picnics. 
