--- a/_data/education.yml
+++ b/_data/education.yml
@@ -12,14 +12,14 @@
     
     <mark>Honors and Awards</mark>
     
-    Outstanding Applied and Computational Mathematics and Statistics Major Award, May 2020
+    Outstanding Applied and Computational Mathematics and Statistics Major Award (May 2020)
 
-    Best Data Visualization Award, Data Fest 2019 at the University of Notre Dame, Apr 2019
+    Best Data Visualization Award, Data Fest 2019 at the University of Notre Dame (Apr 2019)
 
-    Notre Dame Federal Credit Union Scholarship Recipient, Jun 2018 & 2019
+    Notre Dame Federal Credit Union Scholarship Recipient (Jun 2018 & 2019)
 
-    Pichler Family Scholarship Fund Recipient, Sep 2016
+    Pichler Family Scholarship Fund Recipient (Sep 2016)
 
-    Glynn Family Honors Program Scholar, Aug 2016 – May 2020
+    Glynn Family Honors Program Scholar (Aug 2016 – May 2020)
 
     
