--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,7 +1,7 @@
 - layout: left
   name: University of Notre Dame
   dates: Aug 2016 - May 2020
-  qualification: B.S. in Applied and Computational Mathematics and Statistics, magna cum laude
+  qualification: B.S. in Applied and Computational Mathematics and Statistics
   description: | # this will include new lines to allow paragraphs
     During my years at Notre Dame, I gained knowledge and skills in mathematics and statistics, with a focus on computational applications, such as data mining and statistical programming (coursework in R, Python, C++, MATLAB, and SAS). 
     Outside of academics and research, I tutored Math to local high school students, was a TA for an introductory Accounting class, was a member of the Asian American Association, the Student International Business Council, and the Student Union Board.
@@ -11,6 +11,8 @@
     "Applying Machine Learning to Predict Differences between Learning Outcomes", advised by Dr. Alison Cheng.
     
     <mark>Honors and Awards</mark>
+    
+    Magna Cum Laude (May 2020)
     
     Outstanding Applied and Computational Mathematics and Statistics Major Award (May 2020)
 
