--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -31,7 +31,7 @@
     Programs used: <mark>R</mark> <mark>Tableau</mark>
         
 - layout: left
-  company: Performance Science Team of Notre Dame Athletics
+  company: Performance Analytics Team of Notre Dame Athletics
   job_title: Analytics Intern // Research Assistant
   dates: May 2018 - May 2020
   description: | # this will include new lines to allow paragraphs
