--- a/_data/education.yml
+++ b/_data/education.yml
@@ -4,7 +4,8 @@
   qualification: B.S. in Applied and Computational Mathematics and Statistics
   description: | # this will include new lines to allow paragraphs
     During my years at Notre Dame, I gained knowledge and skills in mathematics and statistics, with a focus on computational applications, such as data mining and statistical programming (coursework in R, Python, C++, MATLAB, and SAS). 
-    Outside of academics and research, I tutored Math to local high school students, was a TA for an introductory Accounting class, was a member of the Asian American Association, the Student International Business Council, and the Student Union Board.
+    I additionally explored my interests in education through a minor, which led me to take courses in topics such as education policy and critical pedagogy. 
+    Outside of academics and research, I tutored Math subjects to local high school students, was a TA for an introductory Accounting class, was a member of the Asian American Association, the Student International Business Council, and the Student Union Board.
     
     <mark>Honors Thesis</mark>
     
