--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -15,7 +15,7 @@
   job_title: Research Assistant
   dates: Sep 2017 - May 2020
   description: | # this will include new lines to allow paragraphs
-    A research lab focused on measurement issues in psychological and educationl assessment, with a focus on AP Statistics students. Topics explored include factor analysis, scale development and validation, computerized adaptive testing, low- and high-stakes assessment. Day-to-day tasks included data cleaning, running statistical analyses, conducting literature reviews, documenting research methods/findings, and providing peer feedback on academic manuscripts. 
+    A research lab focused on measurement issues in psychological and educationl assessment, with a focus on AP Statistics students. Topics explored include factor analysis, scale development and validation, computerized adaptive testing, and low- and high-stakes assessment. Day-to-day tasks included data cleaning, running statistical analyses, conducting literature reviews, documenting research methods/findings, and providing peer feedback on academic manuscripts. 
     During my senior year, I wrote an honors thesis on the application of machine learning techniques to predict differences between learning outcomes (class grade, AP score, practice AP score) in AP Statistics classrooms to understand student- and school-level predictors of variation across performance on distinct assessments. 
     
     Programs used: <mark>R</mark>
