--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ favicon: images/favicon.ico
 # Personal info
 name: Honoka Suzuki
 title: Data Scientist
-email: honoka.suzuki3@gmail.com
+email: honoka.suzuki3 AT gmail.com
 website: https://honokasuzuki.github.io/
 
 # Social links
