--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -1,7 +1,7 @@
 - layout: left
   company: EF Education First
   link: www.ef.edu/
-  job_title: Data Science Intern // Data Scientist
+  job_title: Data Science Intern --> Data Scientist
   dates: Summer 2019 // Jul 2020 - Present
   description: | # this will include new lines to allow paragraphs
     Internship projects included creating an interactive summary dashboard to display student survey responses, building a classification model for identifying target schools for sales calls, and giving a presentation on insghts gained from an open-ended analysis on traveler cancellation patterns. 
@@ -31,7 +31,7 @@
         
 - layout: left
   company: Performance Analytics Team of Notre Dame Athletics
-  job_title: Analytics Intern // Research Assistant
+  job_title: Analytics Intern --> Research Assistant
   dates: May 2018 - May 2020
   description: | # this will include new lines to allow paragraphs
     Projects included statistical reliability studies done on various athletic equipment (motion capture systems, wearable technologies), an imputation algorithm development for missing athlete training data, and Bayesian variance component estimation for repeated performance measures. 
