--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ about_content: | # this will include new lines to allow paragraphs
   In my free time, I enjoy healthy baking, making fashion illustrations, and going on picnics. 
 
 # Projects Section
-projects_title: Some Projects
+projects_title: Some Projects (Undergraduate)
 
 # Experience Section
 experience_title: Relevant Experience
