--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -1,4 +1,4 @@
-- layout: center
+- layout: middle
   company: EF Education First
   link: www.ef.edu/
   job_title: Data Science Intern --> Data Scientist
