--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -1,4 +1,4 @@
-- layout: middle
+- layout: top-middle
   company: EF Education First
   link: www.ef.edu/
   job_title: Data Science Intern --> Data Scientist
